[package]
name = "mollusk-on-demand"
description = "A crate that makes testing on Mollusk with mainnet accounts easy"
version = "0.0.1"
license = "MIT"
edition = "2024"

[features]
default = []

[dependencies]
base64 = "0.22"
mollusk-svm = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account = "3.2.0"
solana-commitment-config = "3.0.0"
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"
solana-rpc-client = "3.0.8"
solana-rpc-client-api = "3.0.8"
thiserror = "2.0.17"
