[package]
name = "mollusk-on-demand"
description = "A crate that makes testing on Mollusk with mainnet accounts easy"
version = "0.0.1"
license = "MIT"
edition = "2021"

[features]
default = []

[dependencies]
mollusk-svm = "0.7.0"
solana-account = "3.2.0"
solana-commitment-config = "3.0.0"
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"
solana-rpc-client = "3.0.8"
solana-rpc-client-api = "3.0.8"
thiserror = "2.0.17"
